<resources>
    <string name="app_name">GithubUsers</string>
    <string name="searchbar_hint">Masukkan Username</string>
    <string name="github_username">Username</string>
    <string name="name">Full Name</string>
    <string name="follower">%d Followers</string>
    <string name="following">%d Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="favorite_user">Favorite User</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share">Share</string>
    <string name="github_user">Github User</string>
</resources>